# d2hub

./: .gitignore  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  d2hub.spec  pyproject.toml  requirements.txt
configs/: macro.yaml  timings.yaml
configs/modules/: rules.yaml  timeline.yaml  windows.yaml
docs/golden/: README.md
docs/superpowers/plans/: 2026-04-03-d2hub-v2.md
docs/superpowers/specs/: 2026-04-03-d2hub-v2-design.md
scripts/: build.bat
src/dota_hud/: __main__.py  app.py  config.py  events.py  gsi_server.py  hotkeys.py  log_watcher.py  scheduler.py
src/dota_hud/app/: app_controller.py
src/dota_hud/application/: __init__.py  app_controller.py  commands.py  hud_port.py  hud_presenter.py  infra_provider.py  models.py  ports.py
src/dota_hud/application/use_cases/: __init__.py  (+1 more)
src/dota_hud/config/: gsi_config_writer.py  loader.py  mapper.py  models.py  reader.py  validator.py
src/dota_hud/domain/: events.py  macro_info.py  roles.py  scheduler.py  warning_windows.py
src/dota_hud/infrastructure/: build_provider.py  dota_detector.py  gsi_aiohttp.py  gsi_server.py  hotkeys.py  hotkeys_winapi.py  log_watcher.py  null_hotkeys.py
src/dota_hud/ui/: __init__.py  base.py  factory.py  hud_style.py  hud_tk.py  view_models.py
tests/: test_admin_window.py  test_app_controller.py  test_build_provider.py  test_config.py  test_config_validator.py  test_dota_detector.py  test_gsi_aiohttp.py  test_hotkeys_winapi.py  test_integration.py  test_presenter.py  test_role_detector.py  test_scheduler.py  test_tray.py  test_ui_dirty_flag.py  test_ui_smoke.py
(+13 files in other folders)
