[tool.poetry]
name = "dota-timings-hud"
version = "0.2.0"
description = "Dota 2 HUD assistant with system tray, role detection, and build hints"
authors = ["You"]
readme = "README.md"
packages = [{ include = "dota_hud", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PySide6 = "^6.7.0"
pyyaml = "^6.0.2"
aiohttp = "^3.9.0"

[tool.poetry.scripts]
dota-hud = "dota_hud.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = ">=0.21"
ruff = "^0.8.5"
mypy = "^1.13.0"
pyinstaller = "^6.0"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
